12-faq-collapse-fixed

--- a/04-hidden-search/style.css
+++ b/04-hidden-search/style.css
@@ -47,6 +47,7 @@ body {
 
 .btn {
   background-color: white;
+  color: black;
   border: 0;
   cursor: pointer;
   font-size: 24px;
